--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,20 @@ body {
   box-sizing: border-box;
 }
 
-.container {
+.nav {
   max-width: 70vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
+}
+
+.container {
+  max-width: 75vw;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  gap: 20px;
 }
 
 /* #form {
@@ -25,7 +33,8 @@ body {
   padding: 5px;
   border-radius: 5px;
   display: flex;
-  height: 30px;
+  height: 40px;
+  box-shadow: 3px 2px 5px 2px rgb(0 0 0 / 50%);
 }
 
 #search {
@@ -54,7 +63,7 @@ body {
   box-shadow: 3px 2px 5px 2px rgb(0 0 0 / 50%);
   width: 100%;
   padding: 15px;
-  margin: 15px 0;
+  margin: 0 0 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
